# crocomoji

./: .gitignore  ANOTHER_GAME.md  Caddyfile  docker-compose.yml  start-dev.sh
crocomoji-backend/: Dockerfile  README.md  api.py  game.py  main.py  pyproject.toml  response.py  room.py  schemas.py  schemas.sync-conflict-20260329-180133-CVZ4QCT.py  state.py
crocomoji-backend/app/schemas/: player.sync-conflict-20260329-180133-CVZ4QCT.py
crocomoji-backend/app/state/: game.py  game.sync-conflict-20260329-180133-CVZ4QCT.py  main.py  room.py
crocomoji-backend/controllers/: game.py  lobby.py  round.py  scoring.py
crocomoji-backend/handlers/: actions.py  router.py
crocomoji-backend/models/: game.py  messages.py  player.py  room.py  round.py
crocomoji-backend/services/: broadcast.py  jokes.py
crocomoji-backend/tests/: conftest.py  test_controllers.py  test_http.py  test_jokes.py  test_websocket.py
crocomoji-frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json
crocomoji-frontend/src/: App.vue
crocomoji-frontend/src/api/: game_api.ts  guess_api.ts  player_api.ts  room_api.ts
crocomoji-frontend/src/assets/: base.css
crocomoji-frontend/src/components/: ChatPanel.vue  EmojiInput.sync-conflict-20260329-180133-CVZ4QCT.vue  EmojiInput.vue  StoryContent.vue
crocomoji-frontend/src/enums/: GamePhase.ts
crocomoji-frontend/src/router/: index.ts
crocomoji-frontend/src/services/: api.ts  socket.ts
crocomoji-frontend/src/stores/: game.sync-conflict-20260329-180132-CVZ4QCT.ts  game.ts  player.ts  room.ts  (+2 more)
server/: pyproject.toml
(+8 files in other folders)
